<resources>
    <string name="app_name">Score Box</string>
    <string name="title_activity_main">Score Box</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="banner_ad_unit_id">ca-app-pub-9634046324220049/9490031387</string>
    <string name="cricker">Cricket</string>
    <string name="score">Score</string>
    <string name="news">News</string>
    <string name="title_activity_output">Score Box</string>
    <string name="football">FootBall</string>
    <string name="tennis">Tennis</string>
    <string name="hockey">Hockey</string>
    <string name="golf">Golf</string>
    <string name="chess">BasketBall</string>
</resources>