<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    app:cardBackgroundColor="@color/orange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="22dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:text="@string/football"/>

                        <LinearLayout
                            android:layout_marginRight="1dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/foodball_score"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/orangem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/score" />
                            <Button
                                android:id="@+id/foodball_news"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/orangem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/news" />
                        </LinearLayout
                            >
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    app:cardBackgroundColor="@color/yellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="22dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:text="@string/tennis"/>

                        <LinearLayout
                            android:layout_marginRight="1dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/tennis_score"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/myellow"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/score" />
                            <Button
                                android:id="@+id/tennis_news"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/myellow"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/news" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    app:cardBackgroundColor="@color/green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="22dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:text="@string/hockey"/>

                        <LinearLayout
                            android:layout_marginRight="1dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/hockey_score"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/mgreen"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/score" />
                            <Button
                                android:id="@+id/hockey_news"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/mgreen"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="News" />
                        </LinearLayout
                            >
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    app:cardBackgroundColor="@color/blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="22dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:text="@string/golf"/>

                        <LinearLayout
                            android:layout_marginRight="1dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/golf_score"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/mblue"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/score" />
                            <Button
                                android:id="@+id/golf_news"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/mblue"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/news" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    app:cardBackgroundColor="@color/indigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="22dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:text="@string/chess"/>

                        <LinearLayout
                            android:layout_marginRight="1dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/chess_score"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/mindigo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/score" />
                            <Button
                                android:id="@+id/chess_news"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/mindigo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/news" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    app:cardBackgroundColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="22dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:textSize="30dp"
                            android:text="@string/cricker"/>

                        <LinearLayout
                            android:layout_marginRight="1dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/cricket_score"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/redm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/score" />
                            <Button
                                android:id="@+id/cricket_story"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:background="@color/redm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/news" />
                        </LinearLayout
                            >
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>